--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -30,7 +30,7 @@
 }
 
 @ARTICLE{mackerell2004extending,
-  author = {MacKerell, Alexander D and Feig, Michael and Brooks, Charles L},
+  author = {MacKerell, Alexander D and Feig, Michael and Brooks III, Charles L},
   title = {Extending the treatment of backbone energetics in protein force fields:
 	Limitations of gas-phase quantum mechanics in reproducing protein
 	conformational distributions in molecular dynamics simulations},
