add a lot new results

--- a/writedown/zm/report/ref.bib
+++ b/writedown/zm/report/ref.bib
@@ -1,3 +1,28 @@
+@article{alfe1998first,
+  title={First-principles calculation of transport coefficients},
+  author={Alfe, Dario and Gillan, Michael J},
+  journal={Physical review letters},
+  volume={81},
+  number={23},
+  pages={5161},
+  year={1998},
+  publisher={APS}
+}
+
+@Article{ferrenberg1991statistical,
+  Title                    = {Statistical and systematic errors in monte carlo sampling},
+  Author                   = {Ferrenberg, A.M. and Landau, D.P. and Binder, K.},
+  Journal                  = {Journal of Statistical Physics},
+  Year                     = {1991},
+  Number                   = {5},
+  Pages                    = {867--882},
+  Volume                   = {63},
+
+  File                     = {ferrenberg1991statistical.pdf:ferrenberg1991statistical.pdf:PDF},
+  Publisher                = {Springer},
+  Timestamp                = {2010.09.21}
+}
+
 
 @ARTICLE{pronk2013gromacs,
   author = {Pronk, S. and P{\'a}ll, S. and Schulz, R. and Larsson, P. and Bjelkmar,
